--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,22 @@
 }
 
 #pantalla{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
   margin: 10px;
   background-color: white;
   border-radius: 15px;
   height: 100px;
   
   
+}
+
+#pantalla div{
+  background-color: aqua;
+  height: 40%;
+  margin: 5px;
 }
 
 #cuerpo{
