--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,8 @@
   /* background-color: aqua; */
   height: 40%;
   margin: 5px;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #cuerpo {
